<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:background="@drawable/background1_final">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/habit_name_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_habit_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/habit_description_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/habit_name_text_field"
        android:layout_below="@+id/habit_name_text_field"
        android:layout_marginTop="29dp"
        android:hint="@string/hint_habit_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/habit_desired_duration_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/habit_description_text_field"
        android:layout_below="@+id/habit_description_text_field"
        android:layout_marginTop="33dp"
        android:hint="@string/hint_habit_duration"
        android:inputType="number"
   		/>

    <EditText
        android:id="@+id/total_days_habit_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/habit_desired_duration_textfield"
        android:layout_below="@+id/habit_desired_duration_textfield"
        android:layout_marginTop="22dp" 
        android:hint="@string/hint_total_days"
        android:inputType="number"
        />

    <Spinner
        android:id="@+id/habit_category_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/total_days_habit_create"
        android:layout_below="@+id/total_days_habit_create"
        android:entries="@array/habit_categories"
        android:prompt="@string/habit_category_prompt"
        android:layout_marginTop="24dp" />

     <!-- Earlier color was blue: #013ADF  -->
    
    <Button
        android:id="@+id/submit_habit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habit_category_picker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#FF0000"
        android:fontFamily="sans-serif"
        android:padding="9dp"
        android:text="@string/submit_button_habit"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

</RelativeLayout>
</ScrollView>