<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background1_final"
     >


    
    <TextView
        android:id="@+id/text_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="Arial"
        android:textSize="18sp"
        android:text="@string/small_steps_inspiration" />


   
    <ProgressBar
        android:id="@+id/habit_category_level_main_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_quote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />
    
    	<android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/habit_category_level_main_bar"
        />
    
     <Button
        android:id="@+id/new_habit_main_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/habit_category_level_main_bar"
        android:layout_marginLeft="0dp"
        android:padding="9dp"
        android:background="#FF0000"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:text="@string/new_habit_button_text" />

    <Button
        android:id="@+id/daily_checklist_main_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/new_habit_main_button"
        android:layout_alignBottom="@+d/new_habit_main_button"
        android:layout_alignParentLeft="true"
        android:background="#FF0000"
        android:fontFamily="sans-serif"
        android:padding="9dp"
        android:text="@string/checklist_button_text"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/see_habits_in_category_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/new_habit_main_button"
        android:layout_alignBottom="@id/new_habit_main_button"
        android:layout_toRightOf="@id/daily_checklist_main_button"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="9dp"
        android:background="#FF0000"
        android:fontFamily="sans-serif"
        android:padding="9dp"
        android:text="@string/see_habits"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/current_progress_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/daily_checklist_main_button"
        android:layout_alignTop="@+id/habit_category_level_main_bar"
         />

    <TextView
        android:id="@+id/current_level_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/habit_category_level_main_bar"
        android:layout_toRightOf="@+id/see_habits_in_category_button"
        />

</RelativeLayout>